# guppy-runner

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  justfile  notes.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: issue.yml  pull-request.yaml
docs/source/: conf.py  index.rst
ext/: README.md
guppy_runner/: __init__.py  __main__.py  guppy_compiler.py  hugr_compiler.py  mlir_compiler.py  run.py  runner.py  stage.py  util.py  workflow.py
guppy_runner/compile/: __init__.py  guppy_compiler.py  hugr_compiler.py  linker.py  llvm_compiler.py  mlir_compiler.py  mlir_lowerer.py  runner.py
test_files/: even_odd.py  planqc-1.py  planqc-2.py  planqc-3.py
tests/: __init__.py  test_hugr.py
