[tool.poetry]
name = "guppy-runner"
version = "0.1.0"
description = ""
authors = ["Agustin Borgna <agustin.borgna@quantinuum.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.scripts]
guppy-runner = "guppy_runner.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
guppylang = { git = "git@github.com:CQCL-DEV/guppy.git", rev = "f52a5de" }
logging = "^0.4.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-env = "^1.1.3"
pre-commit = ">=2.10"
pyright = ">=1.1.345"
ruff = ">=0.1.11"

[tool.pyright]

exclude = ["test_files"]

[tool.pytest.ini_options]

# TODO: Find a way to bundle these
env = [
    "HUGR_MLIR_TRANSLATE = ../hugr-mlir/_b/hugr-mlir/target/x86_64-unknown-linux-gnu/debug/hugr-mlir-translate",
    "HUGR_MLIR_OPT = ../hugr-mlir/_b/bin/hugr-mlir-opt",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
